--- a/gateway.yml
+++ b/gateway.yml
@@ -56,6 +56,7 @@ spring:
           uri: 'lb://TRADE-SERVICE'
           filters:
             - UserRole=
+            - RewritePath=/trade/(?<path>.*), /$\{path}
           predicates:
             - Path=/v3/api-docs/**
         - id: portfolio-service
